crates/observed_macros_impl/src/event/snapshots/observed_macros_impl__event__tests__no_signal.snap
---
source: crates/observed_macros_impl/src/event/tests.rs
expression: output
---
const _: () = {
    impl ::observed::Event for NoSignal {
        const DESCRIPTION: ::observed::metadata::EventDescription = ::observed::metadata::EventDescription::new(
            "no.signal",
            ::core::option::Option::Some(::core::any::TypeId::of::<NoSignal>()),
            ::core::option::Option::None,
            ::core::option::Option::None,
            false,
            false,
        );
        fn visit_fields(
            &self,
            visitor: &mut ::observed::processing::FieldVisitorFn<'_>,
        ) -> ::core::ops::ControlFlow<()> {
            ::core::ops::ControlFlow::Continue(())
        }
    }
};
