crates/observed_macros_impl/src/event/snapshots/observed_macros_impl__event__tests__option_dimension_filled_when_none.snap
---
source: crates/observed_macros_impl/src/event/tests.rs
expression: output
---
const _: () = {
    impl ::observed::Event for CountEvent {
        const DESCRIPTION: ::observed::metadata::EventDescription = ::observed::metadata::EventDescription::new(
            "http.request.count",
            ::core::option::Option::Some(::core::any::TypeId::of::<CountEvent>()),
            ::core::option::Option::None,
            ::core::option::Option::Some(
                ::observed::metadata::MetricDescription::new(
                    "http.request.count",
                    ::observed::metadata::InstrumentKind::Counter,
                    "",
                    "",
                ),
            ),
            false,
            false,
        );
        fn visit_fields(
            &self,
            visitor: &mut ::observed::processing::FieldVisitorFn<'_>,
        ) -> ::core::ops::ControlFlow<()> {
            {
                const FIELD_DESC: ::observed::metadata::FieldDescriptor = ::observed::metadata::FieldDescriptor::new(
                    "region",
                    ::core::option::Option::None,
                    ::core::option::Option::Some(
                        ::observed::metadata::MetricFieldEntry::dimension("region"),
                    ),
                );
                match self.region.as_ref() {
                    ::core::option::Option::Some(__val) => {
                        visitor(
                            &FIELD_DESC,
                            &|_engine| ::observed::Value::from(__val.clone()),
                        )?;
                    }
                    ::core::option::Option::None => {
                        visitor(&FIELD_DESC, &|_| ::observed::Value::from("n/a"))?;
                    }
                }
            }
            ::core::ops::ControlFlow::Continue(())
        }
    }
};
